Finish hero section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,21 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <!-- navigation begins -->
+            <!-- navigation ends -->
+            <!-- hero section begins -->
+            <div class="hero flex-apart">
+                <div class="left">
+                    <h1 class="primary-hero-text">Welcome To<br> Bookhub</h1>
+                    <p class="secondary-hero-text">Welcome to bookhub when we send you list of fascinating books,So if you are prepared to lose some sleep,sign up below to get list of books you can’t put down once you begin.</p>
+                    <div class="hero_btn">Sign Up</div>
+                </div>
+                <div class="right">
+                    <img src="./img/library.jpg" alt="image of a library">
+                </div>
+            </div>
+            <!-- hero section ends -->
         </div>
     </header>
+    <!--  -->
 </body>
 </html>
