Finish hotstuff section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>bookhub</title>
 </head>
 <body>
@@ -33,6 +34,80 @@
             <!-- hero section ends -->
         </div>
     </header>
-    <!--  -->
+    <!--hot-stuff-container-->
+    <section class="hot-stuff-container container">
+        <h2 class="hot-stuff-hearder">Some hot Stuff</h2>
+        <div class="flex-center">
+            <!-- hot stuff -->
+            <div class="hot-stuff">
+                <img class="hot-stuff_img" src="./img/hotstuff-1.jpg" alt="book cover">
+                <div class="hotstuff_content">
+                    <div class="ratings flex-center">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p class="narration">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, iste natus? Ipsa non tempora in modi. Sed nemo.
+                    </p>
+                </div>
+            </div>
+             <!-- hot stuff -->
+            <!-- hot stuff -->
+            <div class="hot-stuff">
+                <img class="hot-stuff_img" src="./img/hotstuf-2.webp" alt="book cover">
+                <div class="hotstuff_content">
+                    <div class="ratings flex-center">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p class="narration">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, iste natus? Ipsa non tempora in modi. Sed nemo.
+                    </p>
+                </div>
+            </div>
+             <!-- hot stuff -->
+            <!-- hot stuff -->
+            <div class="hot-stuff">
+                <img class="hot-stuff_img" src="./img/hotstuff-3.jpg" alt="book cover">
+                <div class="hotstuff_content">
+                    <div class="ratings flex-center">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p class="narration">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, iste natus? Ipsa non tempora in modi. Sed nemo.
+                    </p>
+                </div>
+            </div>
+             <!-- hot stuff -->
+            <!-- hot stuff -->
+            <div class="hot-stuff">
+                <img class="hot-stuff_img" src="./img/hotstuff-4.jpg" alt="book cover">
+                <div class="hotstuff_content">
+                    <div class="ratings flex-center">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <p class="narration">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, iste natus? Ipsa non tempora in modi. Sed nemo.
+                    </p>
+                </div>
+            </div>
+             <!-- hot stuff -->
+        </div>
+    </section>
+    <!--hot-stuff-container ends-->
 </body>
 </html>
