Finish hotstuff section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
              <!-- hot stuff -->
             <!-- hot stuff -->
             <div class="hot-stuff">
-                <img class="hot-stuff_img" src="./img/hotstuf-2.webp" alt="book cover">
+                <img class="hot-stuff_img" src="./img/hotstuff-2.jpg" alt="book cover">
                 <div class="hotstuff_content">
                     <div class="ratings flex-center">
                         <i class="fas fa-star"></i>
