finish quote section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <!--hot-stuff-container-->
-    <section class="hot-stuff-container container">
+    <section class="hot-stuff-container">
         <h2 class="hot-stuff-hearder">Some hot Stuff</h2>
         <div class="flex-center">
             <!-- hot stuff -->
@@ -109,5 +109,13 @@
         </div>
     </section>
     <!--hot-stuff-container ends-->
+    <!-- quote section -->
+    <section class="qoute-container flex-center">
+        <div class="quote-content">
+            <p class="quote">The most effective way to change your habits is to focus not on what you want to achieve, but on who you wish to become.</p>
+            <p class="quoter">- James Clear, Author</p>
+        </div>
+    </section>
+    <!-- quote section ends-->
 </body>
 </html>
