Finish call to action section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="left">
                     <h1 class="primary-hero-text">Welcome To<br> Bookhub</h1>
                     <p class="secondary-hero-text">Welcome to bookhub when we send you list of fascinating books,So if you are prepared to lose some sleep,sign up below to get list of books you can’t put down once you begin.</p>
-                    <div class="hero_btn">Sign Up</div>
+                    <div class="hero_btn btn">Sign Up</div>
                 </div>
                 <div class="right">
                     <img src="./img/library.jpg" alt="image of a library">
@@ -117,5 +117,16 @@
         </div>
     </section>
     <!-- quote section ends-->
+    <!-- call to action begins -->
+    <section class="call-to-action container">
+        <div class="call-to-action_text">
+            <h3>Call to action! it's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="call-to-action_btn btn">
+            Sign up
+        </div>
+    </section>
+    <!-- call to action ends -->
 </body>
 </html>
