--- a/index.html
+++ b/index.html
@@ -128,5 +128,8 @@
         </div>
     </section>
     <!-- call to action ends -->
+    <footer>
+        <p>Copyright The Odin Project 2023</p>
+    </footer>
 </body>
 </html>
