--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </section>
     <!-- call to action ends -->
     <footer>
-        <p>Copyright The Odin Project 2023</p>
+        <p>Copyright &copy; The Odin Project 2023</p>
     </footer>
 </body>
 </html>
